force-app/main/default/objects/Placement__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medical History</label>
    <referenceTo>Medical_History__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>