force-app/main/default/objects/Placement__c/validationRules/Empty_Date_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Date_fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Start_Date__c ) ||  ISBLANK( End_Date__c  )</errorConditionFormula>
    <errorMessage>Date fields can not be empty</errorMessage>
</ValidationRule>