force-app/main/default/objects/Placement__c/validationRules/Start_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The Start Date must be earlier than or equal to the End Date</errorMessage>
</ValidationRule>